--- a/index.html
+++ b/index.html
@@ -2,10 +2,81 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Digital Agency</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+	<header class="header">
+		<div class="header__wrapper">
+			<a href="#" class="header__logo">
+				<img src="img/header/Vector.svg" alt="logo">
+				<img src="img/header/Digital Agency.svg" alt="name">
+			</a>
+			<buutton class="header__burger">
+				<span></span>
+			</buutton>
+		</div>
+		<nav class="menu">
+			<ul class="menu__list">
+				<li class="menu__item">
+					<a href="#" class="menu__link">Главная</a>
+				</li>
+				<li class="menu__item">
+					<a href="#" class="menu__link">О нас</a>
+				</li>
+				<li class="menu__item">
+					<a href="#" class="menu__link">Google Adwords</a>
+				</li>
+				<li class="menu__item">
+					<a href="#" class="menu__link">SMM</a>
+				</li>
+				<li class="menu__item">
+					<a href="#" class="menu__link">SEO</a>
+				</li>
+				<li class="menu__item">
+					<a href="#" class="menu__link">Контакты</a>
+				</li>
+			</ul>
+			<ul class="menu__buttons">
+				<li class="menu__button">
+					<button>Свяжитесь с нами</button>
+				</li>
+				<li class="menu__button">
+					<button>LV</button>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
+	<main class="main">
+		<section class="welcome">
+			<div class="welcome__content">
+				<div class="welcome__blur"></div>
+				<div class="welcome__text">
+					<h1>Реклама<br>в Google Ads</h1>
+					<p>Новые клиенты узнают о вашем бизнесе</p>
+				</div>
+			</div>
+		</section>
+		<section class="about">
+			<img src="img/about/img.jpg" alt="" class="about__img">
+			<div class="about__content">
+				<h2 class="about__intro">Вы хотите улучшить результаты своих рекламных кампаний, сократить стоимость привлечения потенциального клиента и/или повысить возврат инвестиций (ROI) от рекламы в системе Google?</h2>
+				<div class="about__trigger">
+					<img src="img/about/icon.svg" alt="">
+					<p>Вы, определенно, попали в правильное место!</p>
+					<p>Специализация нашей команды – реклама в Google.</p>
+				</div>
+				<div class="about__outro_text">
+					<p>Наше агентство занимается разработкой и внедрением стратегий таргетированной, контекстной и поисковой рекламы в Google. Мы помогаем малому бизнесу в Латвии наладить бесперебойный поток коммерческих сообщений до целевой аудитории.</p>
+					<p>Для этого мы используем весь инструментарий Google рекламы, сопровождая пользователя от формирования потребности до осуществления целевых действий.</p>
+				</div>
+			</div>
+		</section>
+
+	</main>
+
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
