--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
 				</div>
 			</div>
 		</section>
-		<section class="about">
-			<img src="img/about/img.jpg" alt="" class="about__img">
+		<section class="about container">
 			<div class="about__content">
+				<div class="about__img">
+					<img src="img/about/img.png" alt="">
+				</div>
 				<h2 class="about__intro">Вы хотите улучшить результаты своих рекламных кампаний, сократить стоимость привлечения потенциального клиента и/или повысить возврат инвестиций (ROI) от рекламы в системе Google?</h2>
 				<div class="about__trigger">
 					<img src="img/about/icon.svg" alt="">
