Complete targets section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Digital Agency</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="header">
@@ -76,7 +78,29 @@
 				</div>
 			</div>
 		</section>
-
+		<section class="targets">
+			<div class="targets__content container">
+				<h2 class="targets__title">Кому мы показываем рекламу в Google?</h2>
+				<div class="targets__grid">
+					<div class="targets__item">
+						<img src="img/targets/1.svg" alt="">
+						<p>Тем, кто ищет в поиске Google Вашу компанию </p>
+					</div>
+					<div class="targets__item">
+						<img src="img/targets/2.svg" alt="">
+						<p>Тем, кто ищет в поиске Google Ваш продукт или услугу</p>
+					</div>
+					<div class="targets__item">
+						<img src="img/targets/3.svg" alt="">
+						<p>Тем, кто уже был на вашем сайте </p>
+					</div>
+					<div class="targets__item">
+						<img src="img/targets/4.svg" alt="">
+						<p>Тем, кто ищет в поиске Google решение своей проблемы</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script type="text/javascript" src="js/app.js"></script>
