Complete services section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,183 @@
 				</div>
 			</div>
 		</section>
+		<section class="services">
+			<h2 class="services__title">Стоимость услуг</h2>
+			<div class="services__list container">
+				<div class="services__item">
+					<h3 class="services__name">Малый бизнес</h3>
+					<p class="services__desc">Бюджет рекламной кампании до 1000 евро</p>
+					<div class="services__table">
+						<div class="services__specs-list">
+							<div class="services__spec">
+								<p class="">Стоимость / мес.</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Количество запросов</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Кол-во Обьявлений</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Кол-во кампаний</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Реклама в поиске</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Реклама в КМС</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Ретаргетинг</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Настройка аналитики</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Google my business аккаунт</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Баннерная реклама</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Видеореклама</p>
+							</div>
+						</div>
+						<div class="services__value-list">
+							<div class="services__value">
+								<p class="">100 евро</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 100 запросов</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 100 обьявлений</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 10 кампаний</p>
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/no.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/no.svg" alt="ok" class="">
+							</div>
+
+						</div>
+					</div>
+					<button class="services__order-btn">
+						<div class="services__btn-inner">
+							<p>Заказать</p>
+							<img src="img/services/arrow-btn.svg" alt="">
+						</div>
+					</button>
+				</div>
+				<div class="services__item">
+					<h3 class="services__name">Средний бизнес</h3>
+					<p class="services__desc">Бюджет рекламной кампании от 1000 евро</p>
+					<div class="services__table">
+						<div class="services__specs-list">
+							<div class="services__spec">
+								<p class="">Стоимость / мес.</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Количество запросов</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Кол-во Обьявлений</p>
+							</div>
+							<div class="services__spec">
+								<p class="">Кол-во кампаний</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Реклама в поиске</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Реклама в КМС</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Ретаргетинг</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Настройка аналитики</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Google my business аккаунт</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Баннерная реклама</p>
+							</div>
+							<div class="services__spec services__spec-icon">
+								<p class=" ">Видеореклама</p>
+							</div>
+						</div>
+						<div class="services__value-list">
+							<div class="services__value">
+								<p class="">10-25% бюджета кампании</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 1000 запросов</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 1000 обьявлений</p>
+							</div>
+							<div class="services__value">
+								<p class="">до 25 кампаний</p>
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+							<div class="services__value services__value-icon">
+								<img src="img/services/yes.svg" alt="ok" class="">
+							</div>
+
+						</div>
+					</div>
+					<button class="services__order-btn">
+						<div class="services__btn-inner">
+							<p>Заказать</p>
+							<img src="img/services/arrow-btn.svg" alt="">
+						</div>
+					</button>
+				</div>
+			</div>
+			<div class="services__info container">
+				<div class="info">
+					<img src="img/services/info.svg" alt="" class="info__icon">
+					<p class="info__text">Минимальный бюджет на рекламу составляет от 100 евро / месяц</p>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<script type="text/javascript" src="js/app.js"></script>
