Complete advertising section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
 	<header class="header">
@@ -278,8 +279,51 @@
 				</div>
 			</div>
 		</section>
+		<section class="advertising">
+			<h2 class="advertising__title">Что такое реклама в Google?</h2>
+			<div class="advertising__list container">
+				<div class="advertising__item">
+					<img src="img/advertising/1.png" alt="1" class="advertising__img">
+					<h3 class="advertising__name">Поисковая реклама</h3>
+					<p class="advertising__text">Данные объявления показываются потенциальным клиентам по введенным ключевым запросам в поисковой строке Google, которые рекламодатель добавил в рекламную кампанию.</p>
+					<div class="advertising__text-hide">
+						<p class="advertising__text">Рассчитана на людей с уже определенной потребностью или проблемой — по сути, это своего рода ответ на запрос пользователя в поисковой строке в виде текстового сообщения.</p>
+						<p class="advertising__text">Данный вид рекламы является основополагающим для получения «горячего» трафика (захода людей на сайт) со сформированным спросом и готовых к покупке.</p>
+					</div>
+					<button class="advertising__hide-show-btn">Развернуть</button>
+				</div>
+				<div class="advertising__item">
+					<img src="img/advertising/2.png" alt="2" class="advertising__img">
+					<h3 class="advertising__name">Банерная реклама</h3>
+					<p class="advertising__text">Позволяет увеличить охват аудитории. Показывается на различных информационных сайтах-партнерах Google и выглядит как статический или динамический баннер с коммерческим предложением.</p>
+					<div class="advertising__text-hide">
+						<p class="advertising__text">РПоказы объявлений можно настроить очень гибко: по социально-демографическим, возрастным, поведенческим характеристикам, по интересам пользователей и другим критериям.</p>
+						<p class="advertising__text">Данная реклама максимально эффективна, когда необходимо охватить максимально большую аудиторию людей для увеличения узнаваемости бренда, компании, отдельной линейки и т.д..</p>
+					</div>
+					<button class="advertising__hide-show-btn">Развернуть</button>
+				</div>
+				<div class="advertising__item">
+					<img src="img/advertising/3.png" alt="3" class="advertising__img">
+					<h3 class="advertising__name">Видеореклама</h3>
+					<p class="advertising__text">Видеореклама формирует в глазах человека образ бренда, вовлекает в рекламный посыл при сравнительно недорогой стоимости контакта с ЦА.</p>
+					<div class="advertising__text-hide">
+						<p class="advertising__text">Инструмент отлично работает на узнаваемость продукта и возникновение потребности у потенциального потребителя.</p>
+					</div>
+					<button class="advertising__hide-show-btn">Развернуть</button>
+				</div>
+				<div class="advertising__item">
+					<img src="img/advertising/4.png" alt="4" class="advertising__img">
+					<h3 class="advertising__name">Ремаркетинг и ретаргетинг</h3>
+					<p class="advertising__text">Большинству людей, которые заходят на ваш сайт, как правило, необходимо больше одного визита, чтобы совершить целевое действие (например: сделать покупку).</p>
+					<div class="advertising__text-hide">
+						<p class="advertising__text">Процент посетителей, которые совершают целевое действие при первом визите на сайт, зависит от вида бизнеса, но в среднем не превышает 30%. Что в таком случае делать с остальными посетителями, которые просто закрыли ваш сайт? Как их вернуть на сайт и конвертировать в клиентов? Для этого и нужен ремаркетинг.</p>
+						<p class="advertising__text">Ремаркетинг используется для возвращения пользователей, которые просматривали ваш сайт или взаимодействовали с вашей рекламой, но не совершили покупку, а также для стимулирования повторных продаж.</p>
+						<p class="advertising__text">Такие пользователи, обычно, более лояльны и вероятность совершения целевого действия выше.</p>
+					</div>
+					<button class="advertising__hide-show-btn">Развернуть</button>
+				</div>
+			</div>
+		</section>
 	</main>
-
-	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
