--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+	<link
+  		rel="stylesheet"
+  		href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+	/>
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
@@ -81,7 +86,7 @@
 		</section>
 		<section class="targets">
 			<div class="targets__content container">
-				<h2 class="targets__title">Кому мы показываем рекламу в Google?</h2>
+				<h2 class="targets__title title">Кому мы показываем рекламу в Google?</h2>
 				<div class="targets__grid">
 					<div class="targets__item">
 						<img src="img/targets/1.svg" alt="">
@@ -103,7 +108,7 @@
 			</div>
 		</section>
 		<section class="services">
-			<h2 class="services__title">Стоимость услуг</h2>
+			<h2 class="services__title title">Стоимость услуг</h2>
 			<div class="services__list container">
 				<div class="services__item">
 					<h3 class="services__name">Малый бизнес</h3>
@@ -280,7 +285,7 @@
 			</div>
 		</section>
 		<section class="advertising">
-			<h2 class="advertising__title">Что такое реклама в Google?</h2>
+			<h2 class="advertising__title title">Что такое реклама в Google?</h2>
 			<div class="advertising__list container">
 				<div class="advertising__item">
 					<img src="img/advertising/1.png" alt="1" class="advertising__img">
@@ -323,6 +328,84 @@
 					<button class="advertising__hide-show-btn">Развернуть</button>
 				</div>
 			</div>
+		</section>
+		<section class="offer">
+			<h2 class="offer__title title">Что мы предлагаем?</h2>
+			<div class="swiper">
+			  <!-- Additional required wrapper -->
+				<div class="swiper-wrapper container">
+			    <!-- Slides -->
+				   <div class="swiper-slide">
+				   		<img src="img/offer/1.svg" alt="" class="slider__img">
+						<h3 class="slider__title">Поисковые кампании</h3>
+						<p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quam cum consectetur debitis recusandae, fugiat voluptatem fugit impedit. </p>
+					</div>
+				   <div class="swiper-slide">
+				   		<img src="img/offer/1.svg" alt="" class="slider__img">
+						<h3 class="slider__title">Поисковые кампании</h3>
+						<p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quam cum consectetur debitis recusandae, fugiat voluptatem fugit impedit. </p>
+				   </div>
+				   <div class="swiper-slide">
+				   		<img src="img/offer/1.svg" alt="" class="slider__img">
+						<h3 class="slider__title">Поисковые кампании</h3>
+						<p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quam cum consectetur debitis recusandae, fugiat voluptatem fugit impedit. </p>
+				   </div>
+				</div>
+			  <!-- If we need pagination -->
+			  <div class="swiper-pagination"></div>
+
+			  <!-- If we need navigation buttons -->
+			  <div class="swiper-button-prev offer__btn-left"></div>
+			  <div class="swiper-button-next offer__btn-right"></div>
+
+			  <!-- If we need scrollbar -->
+			  <div class="swiper-scrollbar"></div>
+			</div>
+			<!-- <div class="offer__slider">
+				<div class="slider">
+					<div class="slider__item">
+						<img src="" alt="" class="slider__img">
+						<h3 class="slider__title">Поисковые кампании</h3>
+						<p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quam cum consectetur debitis recusandae, fugiat voluptatem fugit impedit. </p>
+					</div>
+					<div class="slider__item"></div>
+					<div class="slider__item"></div>
+					<div class="slider__item"></div>
+				</div>
+				<button class="slider__btn"><</button>
+				<button class="slider__btn">></button>
+			</div> -->
+		</section>
+
+		<section class="result">
+			<h2 class="result__title title">Что вы получаете в результате?</h2>
+			<div class="result__list container">
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Увеличение притока потенциальных горячих клиентов с уже определенной и сформированной потребностью</p>
+				</div>
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Вывод вашего сайта на лидирующие позиции на первой странице результатов поиска с пометкой «реклама»</p>
+				</div>
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Продуманная рекламная стратегия</p>
+				</div>
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Постоянный анализ эффективности рекламных кампаний</p>
+				</div>
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Рекомендации по развитию рекламной стратегии</p>
+				</div>
+				<div class="result__item">
+					<img src="img/result/icon.svg" alt="result__icon" class="result__icon">
+					<p class="result__text">Регулировка уровня затрат</p>
+				</div>
+			</div>
+
 		</section>
 	</main>
 </body>
