--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-	<link
-  		rel="stylesheet"
-  		href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
-	/>
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=b2254737-2757-42fd-891c-b1d5e098aafa&lang=ru_RU" type="text/javascript"></script>
+	<script type="text/javascript" src="js/map.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
@@ -329,6 +328,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- -------------------------------------------------------------------------------------------- -->
 		<section class="offer">
 			<h2 class="offer__title title">Что мы предлагаем?</h2>
 			<div class="swiper">
@@ -361,22 +361,8 @@
 			  <!-- If we need scrollbar -->
 			  <div class="swiper-scrollbar"></div>
 			</div>
-			<!-- <div class="offer__slider">
-				<div class="slider">
-					<div class="slider__item">
-						<img src="" alt="" class="slider__img">
-						<h3 class="slider__title">Поисковые кампании</h3>
-						<p class="slider__text">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Quam cum consectetur debitis recusandae, fugiat voluptatem fugit impedit. </p>
-					</div>
-					<div class="slider__item"></div>
-					<div class="slider__item"></div>
-					<div class="slider__item"></div>
-				</div>
-				<button class="slider__btn"><</button>
-				<button class="slider__btn">></button>
-			</div> -->
 		</section>
-
+		<!-- -------------------------------------------------------------------------------------------- -->
 		<section class="result">
 			<h2 class="result__title title">Что вы получаете в результате?</h2>
 			<div class="result__list container">
@@ -405,8 +391,102 @@
 					<p class="result__text">Регулировка уровня затрат</p>
 				</div>
 			</div>
-
 		</section>
+		<section class="clients">
+			<div class="clients__content container">
+				<h2 class="clients__title title">Клиенты, которые нам доверяют</h2>
+				<div class="clients__list">
+					<div class="client">
+						<img src="img/clients/client_logo1.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo2.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo4.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo3.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo6.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo5.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo8.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo7.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo10.png" alt="client logo" class="client__logo">
+					</div>
+					<div class="client">
+						<img src="img/clients/client_logo9.png" alt="client logo" class="client__logo">
+					</div>
+				</div>
+				<div class="clients__call-us">
+					<div class="clients__trigger-container">
+						<h3 class="clients__triger">Хотите, чтобы мы поучаствовали в развитии Вашего проекта?</h3>
+						<p class="clients__triger-subtitle">Просто позвониет нам!</p>
+						<a href="tel:37100000000" class="clients__phone-number">+371 0000 0000</a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer class="footer">
+			<div class="footer__content container">
+				<form action="" method="get" class="form">
+					<h3 class="form__title">Есть вопросы?</h3>
+					<p class="form__subtitle">Свяжитесь с нами</p>
+					<input 
+						type="email" 
+						id="email" 
+						pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+						name="email" 
+						placeholder="eMail"
+						class="form__input">
+					<input 
+						type="text" 
+						pattern="[a-z0-9._%+_]" 
+						name="name" 
+						placeholder="Имя"
+						class="form__input">
+					<input 
+						type="text" 
+						name="phone" 
+						id="phone" 
+						placeholder="+ 7 (000) 000-00-00"
+						class="form__input">
+					<button class="form__button">Оправить</button>
+				</form>
+				<a href="#" class="footer__logo">
+					<img src="img/logo.svg" alt="logo">
+				</a>
+				<div class="contacts">
+					<div class="contacts__list">
+						<div class="contacts__item">
+							<h3 class="contacts__title">Телефон</h3>
+							<a href="tel:0019876543210" class="contacts__contact">+001 987-654-3210</a>
+							<a href="tel:0019876543210" class="contacts__contact">+001 987-654-3210</a>
+						</div>
+						<div class="contacts__item">
+							<h3 class="contacts__title">Email</h3>
+							<a href="mailto:info@example.com" class="contacts__contact">info@example.com</a>
+						</div>
+						<div class="contacts__item">
+							<h3 class="contacts__title">Адрес</h3>
+							<p class=" contacts__contact contacts__contact-adres">123/B, Route 66, Downtown, Washington, DC 20004, US</p>
+						</div>
+					</div>
+					<div class="contacts__map" id="map"></div>
+				</div>
+				<p class="footer__copyright">SIA OL © Visas tiesības aizsargātas 2021</p>
+			</div>
+		</footer>
 	</main>
 </body>
 </html>
